Add logo and an input to form

--- a/public/stylesheets/modular-framework.css
+++ b/public/stylesheets/modular-framework.css
@@ -43,9 +43,9 @@ html { overflow-x: hidden; }
 body { font-family: 'Roboto', sans-serif; margin: 0; padding: 0; width: 100%; overflow-x: hidden; }
 body.boxed { background: #ddd; }
 
-::-moz-selection { background: #1bb776; text-shadow: none; }
+::-moz-selection { background: #ff4136; text-shadow: none; }
 
-::selection { background: #1bb776; text-shadow: none; }
+::selection { background: #ff4136; text-shadow: none; }
 
 ::-webkit-input-placeholder { color: #c3c3c3; }
 
@@ -381,11 +381,12 @@ h1, h2, h3, h4, h5, h6 { font-family: 'Open Sans', sans-serif; }
 
 .onskeliste { background-image: url("/images/LSP13925.png"); }
 
-.ribbon { background: rgba(179, 163, 151, 0.48); width: 25em; color: white; float: left; margin-left: 20%; border-left: 6px solid rgba(255, 255, 255, 0.6); border-right: 6px solid rgba(255, 255, 255, 0.6); min-height: 700px; }
+.ribbon { background: rgba(179, 163, 151, 0.48); width: 25em; color: black; float: left; margin-left: 20%; border-left: 6px solid rgba(255, 255, 255, 0.6); border-right: 6px solid rgba(255, 255, 255, 0.6); min-height: 700px; }
 @media screen and (max-width: 900px) { .ribbon { min-height: inherit; background: rgba(0, 0, 0, 0.48); border: none; margin-left: 0; width: 100%; padding-bottom: 40px !important; } }
 .ribbon h1.page-title { font-size: 2.3em; font-weight: 500; margin-bottom: 0; }
 .ribbon.right { float: right; margin-right: 20%; }
-.onskeliste .ribbon, .svar .ribbon, .info .ribbon { text-align: left; padding: 0 2em 2em 2em; }
+.ribbon .logo { width: 100%; margin-left: 0.3em; }
+.onskeliste .ribbon, .svar .ribbon, .info .ribbon { color: white; text-align: left; padding: 0 2em 2em 2em; }
 .onskeliste .ribbon li, .svar .ribbon li, .info .ribbon li { text-align: left; }
 
 .gifteross { font-size: 2.3em; margin-top: 0; padding-top: 1em; font-weight: 500; }
@@ -398,7 +399,7 @@ h1#names .og { display: block; line-height: 1em; padding-bottom: .25em; }
 h1#names .lisa { display: block; line-height: 1em; }
 @media screen and (max-width: 900px) { h1#names .andre, h1#names .og, h1#names .lisa { display: inline-block; } }
 
-.tid { font-size: 1.5em; margin: 0; }
+.tid { font-size: 1.9em; margin: 0; }
 
 .form { margin: 0; padding-bottom: 0.5em; }
 .form input[type=text] { float: none; }
