--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -54,7 +54,7 @@ $red: #FF4136;
 -------------------------------- */
 $primary-color: $red;
 
-$highlight-color: $green;
+$highlight-color: $red;
 $input-placeholder-color: #c3c3c3;
 
 $background-color: #fff;
