--- a/views/index.erb
+++ b/views/index.erb
@@ -2,11 +2,12 @@
 
   <div class="ribbon">
     <h1 class="gifteross">Vi gifter oss!</h1>
-    <h1 id="names">
+    <!-- <h1 id="names">
       <span class="andre">André</span>
       <span class="og">&</span>
       <span class="lisa">Lisa</span>
-    </h1>
+    </h1> -->
+    <img src="images/andrelisa.png" alt="" class="logo">
     <p class="tid">
       27. juli <br>
       Spin kirke <br>
