--- a/views/svar.erb
+++ b/views/svar.erb
@@ -5,16 +5,26 @@
     <h1 class="page-title">Kommer du?</h1>
     <form class="form" action="http://ravenform.herokuapp.com/replies" method="POST">
       <input type="hidden" name="event_id" value="3">
+
       <input id="name_input" type="text" placeholder="Navn" name="reply[17]" required=required>
+
       <label>
         <input id="attending_input" type="radio" name="reply[18]" value="Ja, jeg kommer" >Ja, jeg kommer
       </label>
+
       <label>
         <input id="not_attending_input" type="radio" name="reply[18]" value="Nei, jeg kommer ikke">Nei, jeg kommer ikke
       </label>
+
+      <label>
+        <input id="not_attending_input" type="checkbox" name="reply[24]" value="Trenger overnatting">Trenger hjelp med overnatting
+      </label>
+
       <input type="submit" id="submit_button" class="button white" value="Send svar" />
+
       <div class="feedback"></div>
     </form>
+    <p>NB: Send inn for hvert familiemedlem som kommer.</p>
     <p>
       Hvis du har spørsmål eller problemer så kan du ringe:
     </p>
