--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -68,10 +68,14 @@ h1, h2, h3, h4, h5, h6 {
   background-image: url('/images/LSP13925.png');
 }
 
+a:hover {
+  color: white;
+}
+
 .ribbon {
   background: rgba(179,163,151, 0.48);
   width: 25em;
-  color: black;
+  color: white;
   float: left;
   margin-left: 20%;
   border-left: 6px solid rgba(255,255,255, 0.6);
@@ -104,7 +108,6 @@ h1, h2, h3, h4, h5, h6 {
   }
 
   .onskeliste &, .svar &, .info & {
-    color: white;
     text-align: left;
     padding: 0 2em 2em 2em;
 
