--- a/views/info.erb
+++ b/views/info.erb
@@ -1,8 +1,8 @@
-<% content_for :title do %>Nyttig informasjon<% end %>
+<% content_for :title do %><%= t 'info.title' %><% end %>
 <div class="eyecatcher info">
 
   <div class="ribbon">
-    <h1 class="page-title">Nyttig informasjon</h1>
+    <h1 class="page-title"><%= t 'info.title' %></h1>
       <p>
         Dato: Lørdag 22.11.2014 <br>
         Vielsen starter kl. 13:00 i Spind kirke i Farsund kommune. <br>
