--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -43,10 +43,6 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
-// .top-nav .inner {
-//  padding: 0!important;
-// }
-
 .eyecatcher {
   border-top: 5px solid rgba(179,163,151,1);
   border-bottom: 5px solid rgba(179,163,151,1);
@@ -122,7 +118,7 @@ a:hover {
 .gifteross {
   font-size: 2.3em;
   margin-top:0;
-  padding-top: 1em;
+  padding: 1em 1em 0 1em;
   font-weight: 500;
 
   @include media($tablet) {
@@ -165,6 +161,7 @@ h1#names {
 .tid {
   font-size: 1.9em;
   margin: 0;
+  // margin-bottom: 2.0em;
 }
 
 .form {
