--- a/views/index.erb
+++ b/views/index.erb
@@ -1,16 +1,13 @@
 <div class="eyecatcher frontpage">
-
   <div class="ribbon">
-    <h1 class="gifteross">Vi gifter oss!</h1>
+    <h1 class="gifteross"><%= t :getting_married %></h1>
     <h1 id="names">
       <span class="andre">André</span>
       <span class="og">&</span>
       <span class="lisa">Lisa</span>
     </h1>
     <p class="tid">
-      27. juli <br>
-      Spin kirke <br>
-      Kl 13.00
+      <%= t :date %>
     </p>
   </div>
 
