--- a/views/info.erb
+++ b/views/info.erb
@@ -4,9 +4,7 @@
   <div class="ribbon">
     <h1 class="page-title"><%= t 'info.title' %></h1>
       <p>
-        Dato: Lørdag 22.11.2014 <br>
-        Vielsen starter kl. 13:00 i Spind kirke i Farsund kommune. <br>
-        Festen fortsetter på Husan (Farsund sentrum). Dørene åpnes kl. 16:00
+        <%= t 'info.content' %>
       </p>
   </div>
 
