--- a/views/index.erb
+++ b/views/index.erb
@@ -1,13 +1,13 @@
 <div class="eyecatcher frontpage">
   <div class="ribbon">
-    <h1 class="gifteross"><%= t :getting_married %></h1>
+    <h1 class="gifteross"><%= t 'index.getting_married' %></h1>
     <h1 id="names">
       <span class="andre">André</span>
       <span class="og">&</span>
       <span class="lisa">Lisa</span>
     </h1>
     <p class="tid">
-      <%= t :date %>
+      <%= t 'index.date' %>
     </p>
   </div>
 
