--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -41,6 +41,11 @@ h1, h2, h3, h4, h5, h6 {
   @include media($tablet) {
     padding-right: 0;
   }
+
+  &.change-language {
+    color: #888;
+
+  }
 }
 
 .eyecatcher {
