--- a/views/layout.erb
+++ b/views/layout.erb
@@ -32,13 +32,16 @@
             </h1>
           </li>
           <li class="<%= current?('svar') %>">
-            <a href="<%= locale_link %>svar">Svar</a>
+            <a href="<%= locale_link %>svar"><%= t 'menu.answer' %></a>
           </li>
           <li class="<%= current?('onskeliste') %>">
-            <a href="<%= locale_link %>onskeliste">Ønskeliste</a>
+            <a href="<%= locale_link %>onskeliste"><%= t 'menu.wishlist' %></a>
           </li>
           <li class="<%= current?('info') %>">
-            <a href="<%= locale_link %>info">Nytting informasjon</a>
+            <a href="<%= locale_link %>info"><%= t 'menu.info' %></a>
+          </li>
+          <li class="change-language  ">
+            <a href="<%= t 'menu.locale_link' %>"><%= t 'menu.change_language' %></a>
           </li>
         </ul>
       </nav>
